--- a/Dan demo/.app.json
+++ b/Dan demo/.app.json
@@ -15,5 +15,9 @@
   "navigation": "tabstrip",
   "view": "home",
   "transition": "slide",
-  "skin": "flat"
+  "showMoreTab": false,
+  "skin": "flat",
+  "skinMainColor": "#1a1a1a",
+  "skinTextColor": "#ffffff",
+  "skinAccentColor": "#10c4b2"
 }
